--- a/degradados/index.html
+++ b/degradados/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="container">
-        
+        <h1>degradados en css</h1>
+        <p id="degradado"></p>
+        <p id="degradado2"></p>
+        <p id="degradado3"></p>
+        <p id="degradado4"></p>
+        <p id="degradado5"></p>
     </div>
 </body>
 </html>
