changes for imagenes

--- a/imagenes/index.html
+++ b/imagenes/index.html
@@ -13,8 +13,10 @@
         <img  class="imagen1" src="luna.jpg" alt="">
         <img  class="imagen2" src="lobo.jpg" alt="">
         <div class="lobo">
-            <img  class="imagen3" src="lobo.jpg" alt="">
-            div.texto
+            <img  class="imagen3" src="lobo.jpg" alt="" class="imagen">
+            <div class="texto_lobo">
+                <div class="efect_text"> LOBO</div>
+            </div>
             <div class="texto">
                 <p>COLMILLO BLANCO</p>
             </div>
