changes for ajuste objetos

--- a/ajustes_objetos/index.html
+++ b/ajustes_objetos/index.html
@@ -10,6 +10,9 @@
 <body>
     <div class="container">
         <h1>Ajustes de objetos</h1>
+        <div class="cuadro_de_contenido">
+            <img src="montaña.jpg" alt="">
+        </div>
         
     </div>
 </body>
